added better styling to event containers

--- a/css/events.css
+++ b/css/events.css
@@ -11,17 +11,24 @@ p,header,span{
 /*Ensure 'Hero Image' takes width of screen*/
 .hero{
 
-  background-image: url('/img/events-hero-image.jpeg');
   border: solid red 3px;
   width: 100%;
+}
+#heroImage{
+  width: 100%;
+  height: auto;
 }
 .line{
   border: solid blue 1px;
 }
 .pageHeader{
+  background-color: #9DAA78;
+  border:5px solid;
+  border-radius:10px;
+  font-family: 'PT Mono', monospace;
   text-align: center;
   border: solid red 2px;
-  font-size: 2.5em;
+  font-size: 1.5em;
 }
 .pageDescription{
   font-size: 1em;
@@ -37,7 +44,6 @@ main{
   height: auto%;
 }
 .eventDetails{
-  border: solid pink 4px;
   text-align: center;
 }
 .date{
@@ -49,8 +55,34 @@ main{
 .eventLink{
 
 }
+.eventContainer{
+  border:5px solid;
+  border-radius:10px;
+  font-family: 'PT Mono', monospace;
+}
+#event1{
+   background-color: #d29d00;
+}
+#event2{
+   background-color: #5F9CBA;
+}
+#event3{
+  background-color: #9AB8ED;
+}
+#event4{
+  background-color: #F77FD6;
+}
+.eventLinkButton{
+  border: 3px solid grey;
+  border-radius: 3px;
+  width: 40%;
+  height: 40px;
+}
+.eventLinkButton:hover{
+  background-color:#9DAA78;
+}
 /*Tablet*/
-@media screen and (min-width: 650px) and (max-width: 1000px ){
+@media screen and (min-width: 762px) and (max-width: 1000px ){
   .hero{
     height: 60vh;
     width: 100%;
@@ -61,10 +93,9 @@ main{
   main{
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
+    justify-content: space-around;
     flex-direction: row;
+    flex-wrap: wrap;
   }
   .eventContainer{
     width: 45%;
@@ -86,6 +117,7 @@ main{
     font-size: 20px;
   }
 }
+/*Desktop */
 @media screen and (min-width: 1000px) {
   .hero{
     height: 80vh;
@@ -121,7 +153,7 @@ main{
     font-size: 20px;
   }
   .eventLinkButton{
-
+    font-size: 20px;;
   }
 }
 }
