--- a/css/events.css
+++ b/css/events.css
@@ -10,7 +10,6 @@ p,header,span{
 }
 /*Ensure 'Hero Image' takes width of screen*/
 .hero{
-
   border: solid red 3px;
   width: 100%;
 }
@@ -45,15 +44,6 @@ main{
 }
 .eventDetails{
   text-align: center;
-}
-.date{
-
-}
-.eventDescription{
-
-}
-.eventLink{
-
 }
 .eventContainer{
   border:5px solid;
@@ -156,4 +146,17 @@ main{
     font-size: 20px;;
   }
 }
+
+/* FOOTER CSS */
+footer {
+   background-color: black;
+   padding: 3em;
+
+   margin-top: 150px;
+}
+
+.socials{
+  font-size: 30px;
+   display: flex;
+   justify-content: space-around;
 }
