--- a/catalog.css
+++ b/catalog.css
@@ -8,16 +8,55 @@
 }
 
 body {
-  font-family: Arial;
+  font-family: 'PT Mono', monospace;
   padding: 20px;
   background: #c0a172;
 }
 
-.header {
-  padding: 30px;
-  font-size: 40px;
-  text-align: center;
-  background: #c0a172;
+nav{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 80px;
+  padding: 10px 90px;
+  box-sizing: border-box;
+  background: rgba(0,0,0,0.7);
+  border-bottom: 1px solid #fff;
+}
+nav .logo{
+  padding: 22px 20px;
+  margin-left: -75px;
+  height: 80px;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  font-family: 'PT Mono', monospace;
+}
+nav ul{
+  list-style: none;
+  float: right;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  font-family: 'PT Mono', monospace;
+}
+nav ul li a{
+  line-height: 80px;
+  color: #fff;
+  padding: 12px 30px;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: 'PT Mono', monospace;
+}
+nav ul li a:hover{
+  background: tan;
+  border-radius: 6px;
+  transition: .6s ease;
 }
 
 h2 {
@@ -84,7 +123,7 @@ p {
 /* Footer */
 
 
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+/* Responsive layout - when the screen is less than 800px wide, the two columns will stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
   .rightcolumn, .leftcolumn { 
     width: 100%;
@@ -95,4 +134,3 @@ p {
   body {
     background-color: #c0a172;
   }
-  
