--- a/css/events.css
+++ b/css/events.css
@@ -1,6 +1,7 @@
 html{
   background-color: #c0a172;
 }
+
 /*Set all fonts to this color*/
 p,header,span{
   color:#112A46;
@@ -10,7 +11,6 @@ p,header,span{
 }
 /*Ensure 'Hero Image' takes width of screen*/
 .hero{
-  border: solid red 3px;
   width: 100%;
 }
 #heroImage{
@@ -26,7 +26,6 @@ p,header,span{
   border-radius:10px;
   font-family: 'PT Mono', monospace;
   text-align: center;
-  border: solid red 2px;
   font-size: 1.5em;
 }
 .pageDescription{
@@ -145,13 +144,16 @@ main{
   .eventLinkButton{
     font-size: 20px;;
   }
+  .eventComplete{
+    background-color: #32CD32;
+  }
 }
 
 /* FOOTER CSS */
 footer {
    background-color: black;
    padding: 3em;
-   width: 95%;
+   width: 100%;
    margin-top: 150px;
 }
 
