--- a/css/nav.css
+++ b/css/nav.css
@@ -54,16 +54,142 @@ nav ul li a{
 nav ul li a:hover{
    background: tan;
    border-radius: 6px;
+   transition: .6s ease;
 }
+@media screen and (max-width: 724px){
 
-/*section{
-   width: 100%;
-   height: 150vh;
-   margin-bottom: 20%;
-   background: url(background.jpg);
-   background-size: cover;
-   background-position: center;
-   object-fit: cover;
+  nav{
+    padding: 0px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 5px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    box-sizing: border-box;
+    background: rgba(0,0,0,0.7);
+    border-bottom: 1px solid #fff;
+  }
+
+  nav .logo{
+    text-align: center;
+    margin:0;
+    float: none;
+    /*overwrite padding back to 0*/
+    padding: 0;
+    padding-top: 35px;
+     width: 100%;
+     height: 70px;
+     font-size: 18px;
+     font-weight: bold;
+     text-transform: uppercase;
+     color: #fff;
+     font-family: 'PT Mono', monospace;
+  }
+
+  nav ul{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
+  list-style: none;
+  float: none;
+  /*overwrite default paddin */
+  padding: 0;
+  padding-top: 8px;
+  font-family: 'PT Mono', monospace;
+  }
+
+  nav ul li a{
+     line-height: 0px;
+     color: #fff;
+     padding: 0 0;
+     text-decoration: none;
+     font-size: 18px;
+     border: solid #c0a172;
+     border-radius: 2px;
+     text-align: center;
+     font-weight: bold;
+     text-transform: uppercase;
+     font-family: 'PT Mono', monospace;
+  }
+
+  nav ul li a:hover{
+     background: tan;
+     border-radius: 6px;
+  }
 }
+/*Tablet */
+@media screen and (min-width: 722px) and (max-width: 1059px ){
 
+    nav{
+      padding: 0px 0px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 5px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      box-sizing: border-box;
+      background: rgba(0,0,0,0.7);
+      border-bottom: 1px solid #fff;
+    }
+
+    nav .logo{
+      text-align: center;
+      margin:0;
+      float: none;
+      /*overwrite padding back to 0*/
+      padding: 0;
+      padding-top: 40px;
+       width: 100%;
+       height: 70px;
+       font-size: 22px;
+       font-weight: bold;
+       text-transform: uppercase;
+       color: #fff;
+       font-family: 'PT Mono', monospace;
+    }
+
+    nav ul{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+    list-style: none;
+    float: none;
+    /*overwrite default paddin */
+    padding: 0;
+    padding-top: 40px;
+    font-family: 'PT Mono', monospace;
+    }
+
+    nav ul li a{
+       line-height: 0px;
+       color: #fff;
+       padding: 0 0;
+       text-decoration: none;
+       font-size: 14px;
+       text-align: center;
+       font-weight: bold;
+       margin-left: 8px;
+       margin-right: 8px;
+       text-transform: uppercase;
+       font-family: 'PT Mono', monospace;
+    }
+
+    nav ul li a:hover{
+       background: tan;
+       border-radius: 6px;
+    }
+  }
+}
 /* END OF NAV AND HEADER CSS */
