--- a/about-us.css
+++ b/about-us.css
@@ -1,5 +1,5 @@
 html{
-   height: 100%;
+   height: 150vh;
 }
 
 body{
@@ -9,59 +9,9 @@ body{
    width: 100vw;
 }
 
-nav{
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100vw;
-   height: 100px;
-   padding: 10px 90px;
-   box-sizing: border-box;
-   background: rgba(0,0,0,0.7);
-   border-bottom: 1px solid #fff;
-}
-
-nav .logo{
-   padding: 22px 20px;
-   margin-left: -75px;
-   height: 80px;
-   float: left;
-   font-size: 24px;
-   font-weight: bold;
-   text-transform: uppercase;
-   color: #fff;
-   font-family: 'PT Mono', monospace;
-}
-
-nav ul{
-   list-style: none;
-   float: right;
-   margin: 0;
-   padding: 0;
-   display: flex;
-   font-family: 'PT Mono', monospace;
-}
-
-nav ul li a{
-   line-height: 80px;
-   color: #fff;
-   padding: 12px 30px;
-   text-decoration: none;
-   font-size: 14px;
-   font-weight: bold;
-   text-transform: uppercase;
-   font-family: 'PT Mono', monospace;
-}
-
-nav ul li a:hover{
-   background: tan;
-   border-radius: 6px;
-   transition: .6s ease;
-}
-
 section{
    width: 100%;
-   height: 150vh;
+   height: 100vh;
    /* margin-bottom: -500px; */
    background: url(background.jpg);
    background-size: cover;
@@ -81,14 +31,14 @@ section{
   align-items: center;
   align-content: stretch;
    gap: 7px;
-   margin-top: -65%;
+   margin-top: -45%;
    text-align: center;
 }
 
 
 #item-0 {
 
-   background-color: #d29d00; 
+   background-color: #d29d00;
    border:3px solid;
    border-radius:10px;
    font-family: 'PT Mono', monospace;
@@ -107,7 +57,7 @@ section{
 
 #item-1 {
 
-   background-color: rgb(230, 49, 121); 
+   background-color: rgb(230, 49, 121);
    border:3px solid;
    border-radius:10px;
    font-family: 'PT Mono', monospace;
@@ -126,7 +76,7 @@ section{
 
 #item-2 {
 
-   background-color: rgb(231, 194, 44); 
+   background-color: rgb(231, 194, 44);
    border:3px solid;
    border-radius:10px;
    font-family: 'PT Mono', monospace;
@@ -145,7 +95,7 @@ section{
 
 #item-3 {
 
-   background-color: lightskyblue; 
+   background-color: lightskyblue;
    border: 3px solid;
    border-radius:10px;
    font-family: 'PT Mono', monospace;
@@ -162,13 +112,13 @@ section{
 
 #item-4 {
 
-   background-color: lightgoldenrodyellow; 
+   background-color: lightgoldenrodyellow;
    border:3px solid;
    border-radius:10px;
    font-family: 'PT Mono', monospace;
    padding: 10px;
    padding-bottom: 10px;
-   
+
 }
 
 #item-4:hover{
@@ -177,72 +127,6 @@ section{
    box-shadow: 0 3px 6px rgba(185, 63, 63, 0.16), 0 3px 6px rgba(0,0,0,0.23);
    transform: translate(0px, -8px);
 }
-
-
-/* FOOTER CSS */
-footer {
-   background-color: tan;
-   padding: 3em;
-   /* display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: flex-end;
-  align-items: center;
-  align-content: stretch; */
-  position: absolute;
-  bottom: 0;
-  top: 1275px;
-  width: 87.5%;
-  height: 2.5rem;  
-  
-}
-  
-
-.socials{
-   display: flex;
-   justify-content: space-around;
-   font-size: 30px;
-   width: 100%;
-   height: auto;
-}
-
-.social-icon{
-   color: black;
-   transition: color 0.2s;
- }
- 
- .social-icon:hover{
-   color: rgb(54, 97, 239);
- }
- 
- .social-insta{
-   color: black;
-   transition: color 0.2s;
- }
- 
- .social-insta:hover{
-   color: fuchsia;
- }
- 
- .social-tiktok {
-   color: black;
-   transition: color 0.2s;
- }
- 
- .social-tiktok:hover{
-   color: lightcoral;
- }
- 
- .social-snap{
-   color: black;
-   transition: color 0.2s;
- }
- 
- .social-snap:hover{
-   color: yellow;
- }
-
-
 
 @media screen and (min-width: 762px) and (max-width: 1000px ){
    .container{
@@ -256,7 +140,7 @@ footer {
        gap: 7px;
        margin-top: -100%;
        text-align: center;
-   
+
    }
    ul li a{
       list-style: none;
@@ -265,7 +149,7 @@ footer {
       padding: 0;
       display: flex;
       font-family: 'PT Mono', monospace;
-   } 
+   }
 
    section{
       width: 100%;
@@ -276,4 +160,8 @@ footer {
       background-position: center;
       object-fit: cover;
    }
+}
+@media screen and (max-width: 761px){
+   .container{
+     margin-top: -100%;
 }
