--- a/css/contact.css
+++ b/css/contact.css
@@ -2,9 +2,6 @@ body {
     padding: 0;
     margin: 0;
     background-color: #c0a172;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 25% 50% 25%;  
 }
 
 h1 {
@@ -20,7 +17,7 @@ h1 {
 }
 
 .container {
-    background-color: #c0a172; 
+    background-color: #c0a172;
 }
 
 .item-1 {
@@ -38,6 +35,7 @@ h1 {
 .item-5 {
     display: flex;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 input {
@@ -54,60 +52,16 @@ label {
 
 /* MEDIA QUERIES */
 
-/* @media screen and (min-width: 864px){
-    
-    .item-1 {
-    /* display: flex;
-    justify-content: end; */
-    /* flex-direction: column; 
-    width: 50%;
-}
-    
-}
-
 @media screen and (min-width: 864px){
-    
-    .item-3 {
-    /* display: flex;
-    justify-content: end; */
-    /* flex-direction: column; 
-    width: 50%;
-}
-    
-} */
-
-/* @media screen and (min-width: 864px){
-    .contactinfo {
-    /* display: flex;
-    flex-wrap: wrap-reverse;  
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-
-}
-
-@media screen and (min-width: 864px) {
-    .container {
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 2;
-        grid-row-end: 3;
-    }
-} */
-
-@media screen and (min-width: 864px){
-    body {
+    main {
         display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-rows: 25% 50% 25%;  
+        grid-template-rows: 25% 50% 25%;
     }
 
     .container {
         grid-column: 2/span 1;
         grid-row: 2/span 1;
-        border: solid red;
     }
 
     .contactinfo {
@@ -118,46 +72,10 @@ label {
     .contactinfo h1 {
         text-align: center;
     }
-
-
 }
 
-/*@media screen and (min-width: 864px){
-    .container {
-    display: flex;
-    justify-content: end;
-    flex-wrap: wrap;
+@media screen and (min-width: 1000px){
+    .contactinfo p {
+        font-size: 20px;
+    }
 }
-    
-} */
-
-/*MEDIA QUERIES 
-
-@media screen and (min-width: 864px){
-    .item-1 {
-    display: flex;
-    justify-content: end;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-    
-}
-
-@media screen and (min-width: 864px){
-    .item-3 {
-    display: flex;
-    justify-content: end;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-    
-}
-
-@media screen and (min-width: 864px){
-    .contactinfo {
-    display: flex;
-    flex-wrap: wrap;
-
-}
-
-} */
