--- a/index.css
+++ b/index.css
@@ -1,64 +1,14 @@
 html{
-    height: 100%;
+    height: 100;
  }
- 
+
  body{
     margin: 0;
     padding: 0;
     font-family: Arial;
     width: 100vw;
  }
- 
- nav{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100px;
-    padding: 10px 90px;
-    box-sizing: border-box;
-    background: rgba(0,0,0,0.7);
-    border-bottom: 1px solid #fff;
- }
- 
- nav .logo{
-    padding: 22px 20px;
-    margin-left: -75px;
-    height: 80px;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #fff;
-    font-family: 'PT Mono', monospace;
- }
- 
- nav ul{
-    list-style: none;
-    float: right;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    font-family: 'PT Mono', monospace;
- }
- 
- nav ul li a{
-    line-height: 80px;
-    color: #fff;
-    padding: 12px 30px;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-family: 'PT Mono', monospace;
- }
- 
- nav ul li a:hover{
-    background: tan;
-    border-radius: 6px;
-    transition: .6s ease;
- }
- 
+
  /* section{
     width: 100%;
     height: 150vh;
@@ -74,17 +24,19 @@ html{
     color: rgb(65, 65, 65);
     padding: 50px;
     margin: 485px;
-    font-size: 35px;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: center;
-      align-items: center;
-      align-content: stretch;
-      text-align: center;
-      background-color: lightgoldenrodyellow; 
-   border:3px solid;
-   border-radius:10px;
+    margin-bottom: 10%;
+    margin-top: 400px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+    text-align: center;
+    background-color: lightgoldenrodyellow;
+    border: 3px solid;
+    border-radius: 10px;
   }
 
   .hero {
@@ -96,13 +48,13 @@ html{
     background-size: cover;
     position: relative; */
     width: 100%;
-    height: 125vh;
+    height: 100vh;
     /* margin-bottom: -500px; */
     background-size: cover;
     background-position: center;
     object-fit: cover;
   }
-  
+
   .hero-text {
       display: flex;
       flex-direction: row;
@@ -112,86 +64,9 @@ html{
       align-content: stretch;
       font-family: 'PT Mono', monospace;
   }
- /* FOOTER CSS */
-footer {
-    background-color: tan;
-    padding: 3em;
-    display: flex;
-   flex-direction: column;
-   flex-wrap: nowrap;
-   justify-content: flex-end;
-   align-items: center;
-   align-content: stretch;
-   /* position: absolute; */
-   bottom: 0;
-   width: 95%;
-   height: 2.5rem; 
-   
- }
-   
- 
- .socials{
-    display: flex;
-    justify-content: space-around;
-    font-size: 30px;
-    width: 100%;
-    height: auto;
- }
- 
- .social-icon{
-    color: black;
-    transition: color 0.2s;
-  }
-  
-  .social-icon:hover{
-    color: rgb(54, 97, 239);
-  }
-  
-  .social-insta{
-    color: black;
-    transition: color 0.2s;
-  }
-  
-  .social-insta:hover{
-    color: fuchsia;
-  }
-  
-  .social-tiktok {
-    color: black;
-    transition: color 0.2s;
-  }
-  
-  .social-tiktok:hover{
-    color: lightcoral;
-  }
-  
-  .social-snap{
-    color: black;
-    transition: color 0.2s;
-  }
-  
-  .social-snap:hover{
-    color: yellow;
-  }
 
 
   @media screen and (min-width: 762px) and (max-width: 1000px ){
-    footer {
-        background-color: tan;
-        padding: 3em;
-        display: flex;
-       flex-direction: column;
-       flex-wrap: nowrap;
-       justify-content: flex-end;
-       align-items: center;
-       align-content: stretch;
-       /* position: absolute; */
-       bottom: 0;
-       width: 87.5%;
-       height: 2.5rem; 
-     }
-    }
-
     .hero {
         background-image: url("hero.jpg");
         /* width: 100%;
@@ -201,9 +76,10 @@ footer {
         background-size: cover;
         position: relative; */
         width: 100%;
-        height: 151vh;
+        height: 100vh;
         /* margin-bottom: -500px; */
         background-size: cover;
         background-position: center;
         object-fit: cover;
       }
+    }
